tests/pass/run/imported_library_class_metadata_parity/main.kira
import support as Support

@Main
function main() {
    let config = Support.makeConfig()
    let label = Support.Label()
    print(label.render())

    print(config.node.value)
    return
}
