tests/fail/graph/outside_app_import/app/main.kira
import support as Support

@Main
function main() {
    Support.hello()
    return
}
